tests/paczka1/fuzzy1/80701064.err
Error in line 8: A362 A698 96,7
Error in line 11: NAU6T6IW S249 47,3
